tests/snapshots/deserializer__string_empty.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n''"
---
=== VALUE ===
String(OneByte(""))

=== HEAP ===
Heap {}

