tests/snapshots/deserializer__string_one_byte.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n'asd'"
---
=== VALUE ===
String(OneByte("asd"))

=== HEAP ===
Heap {}

