tests/snapshots/deserializer__string_primitive_empty.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew String('')"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: StringObject(
        OneByte(""),
    ),
}

