tests/snapshots/deserializer__string_primitive_two_byte.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew String('asd 🌎')"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: StringObject(
        TwoByte("asd 🌎"),
    ),
}

