tests/snapshots/deserializer__string_two_byte.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n'asd 🌎'"
---
=== VALUE ===
String(TwoByte("asd 🌎"))

=== HEAP ===
Heap {}

