tests/snapshots/deserializer__uint16array_two_bytes.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Uint16Array([1, 2])"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            1,
            0,
            2,
            0,
        ],
        max_byte_length: None,
    },
    1: ArrayBufferView {
        kind: Uint16Array,
        buffer: *0,
        byte_offset: 0,
        length: 2,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
}

